# dsplib

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  bastard.toml  conanfile.py  dsplib.pro
.github/workflows/: android-ndk.yml  coverage.yml  dsplib-ci.yml  linux.yml  static.yml  valgrind.yml  windows.yml
benchs/: CMakeLists.txt  adaptive.cpp  audio.cpp  fft.cpp  fir.cpp  ifft.cpp  math.cpp  resample.cpp  slice.cpp  subband.cpp
cmake/: CPM.cmake  ConfigFFT.cmake  FFTWConfig.cmake  FindFFTW.cmake  FindFFTW3.cmake  FindNE10.cmake  InstallTools.cmake  NE10Config.cmake  bastard_setup.cmake  config_fft.cmake  config_fftw3.cmake  defs.h.in  fetch_helper.cmake  sanitizer.cmake  version.h.in
cmake/bastard/: bastard.cmake  bastard_setup.cmake  build_info.h.in  check_bin.cmake  check_defines.cmake  check_deps.cmake  check_lang.cmake  check_lib.cmake  check_options.cmake  check_version.cmake  fetch_content.cmake  fetch_helper.cmake  include_guard.cmake  lock_generate.cmake  make_build_info_file.cmake  make_version_file.cmake  specific_ctrl.cmake  toml_parser.cmake  utils.cmake  version.h.in
cmake/bastard/hooks/: bastard-post-commit  bastard-pre-commit  check-git-hook.cmake  post-commit  pre-commit
cmake/try_compile/: ne10.cpp
docs/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt  bastard.toml  main.cpp  spectrum.cpp
examples/basics/: CMakeLists.txt  main.cpp
examples/fftw-backend/: CMakeLists.txt  fft.cpp  main.cpp
include/: dsplib.h
include/dsplib/: agc.h  allocator.h  array.h  assert.h  awgn.h  buffer.h  compressor.h  czt.h  delay.h  detector.h  dft.h  fft.h  fir.h  gccphat.h  hilbert.h  ifft.h  iir.h  indexing.h  inplace.h  interp.h  iterator.h  keywords.h  literals.h  lms.h  ma-filter.h  math.h  medfilt.h  mempool.h  mfcc.h  noise-gate.h  pool.h  random.h  resample.h  rls.h  sinad.h  slice.h  snr.h  span.h  spectrum.h  stft.h  (+8 more)
include/dsplib/audio/: compressor.h  limiter.h  noise-gate.h
include/dsplib/matrix/: base-matrix.h  index-matrix.h  matrix.h  slice-matrix.h
lib/: agc.cpp  allocator.cpp  arr_cmplx.cpp  arr_real.cpp  awgn.cpp  bitrev.cpp  corr.cpp  ctfft.cpp  czt.cpp  datacache.h  detector.cpp  dft-tables.cpp  dft-tables.h  dft.cpp  fft-filter.cpp  fft.cpp  findpeaks.cpp  fir.cpp  gccphat.cpp  hilbert.cpp  ifft.cpp  interp.cpp  lms.cpp  lru-cache.h  ma-filter.h  math.cpp  math_kernels.cpp  medfilt.cpp  mempool.cpp  mfcc.cpp  mscohere.cpp  pool.cpp  primes.cpp  random.cpp  rls.cpp  sinad.cpp  snr.cpp  spectrum.cpp  stft.cpp  stream.cpp  (+6 more)
lib/fft/: cmplx-ifft.h  czt.cpp  dft-tables.cpp  dft-tables.h  dsplib.cpp  fact-fft.cpp  fact-fft.h  factory.cpp  factory.h  fft.cpp  fftw3.cpp  fftw3f.cpp  ifft.cpp  ne10.cpp  pow2-fft.cpp  pow2-fft.h  primes-fft.h  real-fft.cpp  real-fft.h  real-ifft.cpp  real-ifft.h  small-fft.h
lib/fft2-impl/: default.h  fftw3.h  ne10.h
lib/internal/: besseli.cpp  besseli.h  lru-cache.h
lib/resample/: fir-decimator.cpp  fir-interpolator.cpp  fir-rate-converter.cpp  resample.cpp
lib/specific/: fft.h  fftw-plan.h
lib/specific/dsplib-fft/: dft-tables.cpp  fft.cpp
lib/specific/ne10-fft/: fft.cpp
src/: arr_cmplx.cpp  arr_real.cpp  awgn.cpp  dft-tables.cpp  dft-tables.h  fft.cpp  fir.cpp  hilbert.cpp  interp.cpp  math.cpp  medfilt.cpp  slice.cpp  tuner.cpp  utils.cpp  xcorr.cpp
tests/: CMakeLists.txt  agc_test.cpp  allocator_test.cpp  apply_test.cpp  arr_cmpl_test.cpp  arr_cmpl_test.h  arr_real_test.cpp  arr_real_test.h  audio_test.cpp  base_test.cpp  buffer_test.cpp  delay_test.cpp  detector_test.cpp  dft_test.cpp  fft_test.cpp  fir_test.cpp  gccphat_test.cpp  hilbert_test.cpp  iir_test.cpp  main.cpp  math_test.cpp  math_test.h  matrix_test.cpp  medfilt_test.cpp  random_test.cpp  resamp_test.cpp  sinad_test.cpp  slice_test.cpp  snr_test.cpp  span_test.cpp  spectrum_test.cpp  subband_test.cpp  tests_common.h  thread_safe_test.cpp  throw_test.cpp  tuner_test.cpp  types_test.cpp  utils_test.cpp  window_test.cpp  xcorr_test.cpp
tools/plot/: plot.h
